# LatamQA

./: .gitignore  CITATION.cff  LICENSE  README.md  eval_mcq.py  example_scripts.sh  prompt_eval.txt  pyproject.toml
latamqa/: compute_leaderboard.py  eval_mcq.py  eval_mcq_any.py  leaderboard.py  model_eval.py  model_schema.py  serve_vllm.py
latamqa/models/: claude-3-opus.yaml  gemma-2-27b.yaml  gemma-2-2b.yaml  gemma-2-9b.yaml  gpt-4o.yaml  kimi-k2-thinking.yaml  latam-gpt-1.0-70b.yaml  llama-3.1-405b.yaml  llama-3.1-70b.yaml  llama-3.1-8b.yaml  llama-3.2-1b.yaml  llama-3.3-70b.yaml  mistral-large-2.yaml  mixtral-8x22b.yaml  qwen2.5-14b.yaml  sabia-4-thinking.yaml
notebooks/: 01. leaderboard_mgmnt.ipynb
results/: mcq_eval_results_es-es_en_ministral-small.csv  mcq_eval_results_es-es_o_ministral-small.csv  mcq_eval_summary_es-es_en_ministral-small.txt  mcq_eval_summary_es-es_o_ministral-small.txt
tests/: test_blind_eval.py  test_compute_results_slices.py  test_eval_mcq.py  test_leaderboard_logic.py  test_model_options.py  test_model_schema.py
